fixed image wrap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -23,4 +23,5 @@ p {
 .image-container {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
